--- a/index.html
+++ b/index.html
@@ -216,37 +216,130 @@
 
         <div class="results glass-panel">
           <h2>Performance Estimates</h2>
-          <div class="result-item">
-            <span>Total Weight:</span>
-            <span id="totalWeight">0g</span>
-          </div>
-          <div class="result-item">
-            <span>Estimated Flight Time:</span>
-            <span id="flightTime">0 mins</span>
-          </div>
-          <div class="result-item">
-            <span>Payload Capacity:</span>
-            <span id="payloadCapacity">0g</span>
-          </div>
-          <div class="result-item">
-            <span>Max Speed:</span>
-            <span id="maxSpeed">0 km/h</span>
-          </div>
-          <div class="result-item">
-            <span>Power-to-Weight Ratio:</span>
-            <span id="powerToWeight">0:1</span>
-          </div>
-          <div class="result-item">
-            <span>Range (Line of Sight):</span>
-            <span id="range">0 m</span>
-          </div>
-          <div class="result-item">
-            <span>Battery Discharge Rate:</span>
-            <span id="dischargeRate">0 C</span>
-          </div>
-          <div class="result-item">
-            <span>Current Draw (Hover):</span>
-            <span id="hoverCurrent">0 A</span>
+          <div class="result-container">
+            <div class="result-item">
+              <span>Total Weight:</span>
+              <span id="totalWeight">0g</span>
+            </div>
+            <div class="slider-container" data-target="batteryCapacity">
+              <input
+                type="range"
+                min="0"
+                max="5"
+                step="1"
+                class="config-slider"
+                data-config="batteryCapacity"
+              />
+              <div class="slider-labels">
+                <span>1300mAh</span>
+                <span>1500mAh</span>
+                <span>2200mAh</span>
+                <span>3000mAh</span>
+                <span>4000mAh</span>
+                <span>5000mAh</span>
+              </div>
+            </div>
+
+            <div class="result-item">
+              <span>Estimated Flight Time:</span>
+              <span id="flightTime">0 mins</span>
+            </div>
+            <div class="slider-container" data-target="batteryType">
+              <input
+                type="range"
+                min="0"
+                max="5"
+                step="1"
+                class="config-slider"
+                data-config="batteryType"
+              />
+              <div class="slider-labels">
+                <span>3S LiPo</span>
+                <span>4S LiPo</span>
+                <span>6S LiPo</span>
+                <span>3S Li-Ion</span>
+                <span>4S Li-Ion</span>
+                <span>6S Li-Ion</span>
+              </div>
+            </div>
+
+            <div class="result-item">
+              <span>Payload Capacity:</span>
+              <span id="payloadCapacity">0g</span>
+            </div>
+            <div class="slider-container" data-target="frameSize">
+              <input
+                type="range"
+                min="0"
+                max="3"
+                step="1"
+                class="config-slider"
+                data-config="frameSize"
+              />
+              <div class="slider-labels">
+                <span>3 inch</span>
+                <span>5 inch</span>
+                <span>7 inch</span>
+                <span>10 inch</span>
+              </div>
+            </div>
+
+            <div class="result-item">
+              <span>Max Speed:</span>
+              <span id="maxSpeed">0 km/h</span>
+            </div>
+            <div class="slider-container" data-target="motorKv">
+              <input
+                type="range"
+                min="0"
+                max="3"
+                step="1"
+                class="config-slider"
+                data-config="motorKv"
+              />
+              <div class="slider-labels">
+                <span>1700KV</span>
+                <span>2400KV</span>
+                <span>2700KV</span>
+                <span>3000KV</span>
+              </div>
+            </div>
+
+            <div class="result-item">
+              <span>Power-to-Weight Ratio:</span>
+              <span id="powerToWeight">0:1</span>
+            </div>
+
+            <div class="result-item">
+              <span>Range (Line of Sight):</span>
+              <span id="range">0 m</span>
+            </div>
+            <div class="slider-container" data-target="vtxPower">
+              <input
+                type="range"
+                min="0"
+                max="3"
+                step="1"
+                class="config-slider"
+                data-config="vtxPower"
+              />
+              <div class="slider-labels">
+                <span>25mW</span>
+                <span>200mW</span>
+                <span>600mW</span>
+                <span>1000mW</span>
+              </div>
+            </div>
+
+            <div class="result-item">
+              <span>Battery Discharge Rate:</span>
+              <span id="dischargeRate">0 C</span>
+            </div>
+
+            <div class="result-item">
+              <span>Current Draw (Hover):</span>
+              <span id="hoverCurrent">0 A</span>
+            </div>
           </div>
 
           <!-- Add Component Analysis Section -->
