--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
           </div>
 
           <div class="config-section">
-            <label for="batteryCapacity">Battery Capacity (mAh)</label>
+            <label for="batteryCapacity">Battery Capacity</label>
             <select id="batteryCapacity" class="glass-select">
-              <option value="1300">1300mAh</option>
-              <option value="1500" selected>1500mAh</option>
-              <option value="2200">2200mAh</option>
-              <option value="3000">3000mAh</option>
-              <option value="4000">4000mAh</option>
-              <option value="5000">5000mAh</option>
+              <option value="1300">1300 mAh</option>
+              <option value="1500" selected>1500 mAh</option>
+              <option value="2200">2200 mAh</option>
+              <option value="3000">3000 mAh</option>
+              <option value="4000">4000 mAh</option>
+              <option value="5000">5000 mAh</option>
             </select>
           </div>
 
@@ -231,12 +231,12 @@
                 data-config="batteryCapacity"
               />
               <div class="slider-labels">
-                <span>1300mAh</span>
-                <span>1500mAh</span>
-                <span>2200mAh</span>
-                <span>3000mAh</span>
-                <span>4000mAh</span>
-                <span>5000mAh</span>
+                <span>1300 mAh</span>
+                <span>1500 mAh</span>
+                <span>2200 mAh</span>
+                <span>3000 mAh</span>
+                <span>4000 mAh</span>
+                <span>5000 mAh</span>
               </div>
             </div>
 
