Refactor APC, charts, UI, and physics code
Multiple improvements across UI, charting, APC integration, and physics calculations:

- index.html: normalize doctype, mark some config sections as .fpv-only, and update copyright year to 2026.
- css/styles.css: minor formatting cleanup and removed an overriding responsive main grid rule.
- js/apcDemo.js: safer efficiency logging and correct propeller grouping (use prop objects instead of IDs).
- js/calculations.js: refactor APC-related APIs (delegate status handling, add select/get helpers), implement calculatePowerEstimate, make APC thrust/power paths more robust with fallbacks, add vtxPower/all option handling, and rename some physics functions for clarity (calculateThrust -> calculateThrustPhysics, calculateMotorEfficiency -> calculateMotorEfficiencyPhysics).
- js/charts.js: ignore inputs that are hidden via any ancestor, add logic to detect which config key a comparison dataset varies (_identifyComparisonKey), improve tempConfig handling, format labels more accurately, and add RPM/efficiency fallbacks.
- js/componentAnalysis.js: add fallback battery weight, and compute prop size mapping for fixed-wing from wingspan.
- js/main.js: remove duplicate APC initialization, consolidate safe DOM updates, toggle .fpv-only visibility with drone type, simplify chart preloading and update flow, and adjust tab button handling to use .tab-btn.
- js/models.js: set transparent scene background and stop passing color to createArm.

These changes aim to make UI toggles and charts more robust, improve APC integration fallbacks, clarify physics function names, and handle mixed FPV/fixed-wing configs more predictably.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -30,7 +30,7 @@
         <div class="config-panel glass-panel">
           <h2>Configuration</h2>
 
-          <div class="config-section">
+          <div class="config-section fpv-only">
             <label for="frameSize">Frame Size</label>
             <select id="frameSize" class="glass-select">
               <option value="3inch">3 inch</option>
@@ -40,7 +40,7 @@
             </select>
           </div>
 
-          <div class="config-section">
+          <div class="config-section fpv-only">
             <label for="motorKv">Motor KV Rating</label>
             <select id="motorKv" class="glass-select">
               <option value="1700">1700KV</option>
@@ -390,7 +390,7 @@
 
       <footer class="glass-panel">
         <p>
-          © 2025 Drone Setup - Build your perfect FPV or Fixed Wing aircraft
+          © 2026 Drone Setup - Build your perfect FPV or Fixed Wing aircraft
         </p>
       </footer>
     </div>
