--- a/index.html
+++ b/index.html
@@ -388,6 +388,350 @@
         </div>
       </main>
 
+      <section
+        class="glass-panel calculation-guide"
+        aria-label="Calculation guide"
+      >
+        <h2>Calculation Guide &amp; Correlations</h2>
+
+        <div class="guide-grid">
+          <div class="guide-card">
+            <h3>Configuration Inputs</h3>
+            <ul>
+              <li>
+                <strong>Frame Size (FPV):</strong> Prop size proxy. Larger
+                frames increase thrust potential, weight, and speed potential.
+              </li>
+              <li>
+                <strong>Motor KV:</strong> RPM per volt. Higher KV increases
+                speed and peak current draw, but usually reduces efficiency.
+              </li>
+              <li>
+                <strong>Battery Chemistry:</strong> LiPo supports higher
+                discharge; Li-Ion has better energy density but lower safe
+                C-rate.
+              </li>
+              <li>
+                <strong>Battery Capacity:</strong> Higher mAh increases energy
+                and flight time, but also adds battery weight.
+              </li>
+              <li>
+                <strong>Flight Controller:</strong> Affects electronics weight
+                contribution.
+              </li>
+              <li>
+                <strong>Camera:</strong> Changes payload weight and impacts
+                total mass.
+              </li>
+              <li>
+                <strong>VTX Power:</strong> Improves link range, increases
+                power-system load and small weight overhead.
+              </li>
+              <li>
+                <strong>Wingspan (Fixed Wing):</strong> Larger wings improve
+                cruise efficiency but generally reduce top speed.
+              </li>
+              <li>
+                <strong>Wing Type (Fixed Wing):</strong> Modifies
+                drag/efficiency assumptions and therefore speed, current, and
+                range behavior.
+              </li>
+              <li>
+                <strong>Propeller Selection (APC):</strong> Auto/manual prop
+                choice impacts thrust and power modeling when APC data is
+                available.
+              </li>
+              <li>
+                <strong>Analyze Impact By:</strong> Controls which parameter is
+                swept in comparison charts.
+              </li>
+            </ul>
+          </div>
+
+          <div class="guide-card">
+            <h3>Calculated Outputs</h3>
+            <ul>
+              <li>
+                <strong>Total Weight:</strong> Sum of frame/airframe, motor(s),
+                battery, electronics, camera, VTX, and wiring assumptions.
+              </li>
+              <li>
+                <strong>Estimated Flight Time:</strong> Derived from usable
+                battery energy and average current demand.
+              </li>
+              <li>
+                <strong>Payload Capacity:</strong> Estimated max safe takeoff
+                mass minus current configuration mass.
+              </li>
+              <li>
+                <strong>Max Speed:</strong> Function of KV, voltage (cell
+                count), geometry (frame or wing), and chemistry power factor.
+              </li>
+              <li>
+                <strong>Power-to-Weight:</strong> Estimated available power
+                normalized by mass.
+              </li>
+              <li>
+                <strong>Range (Line of Sight):</strong> Minimum of
+                signal-limited range and time/speed-limited range.
+              </li>
+              <li>
+                <strong>Battery Discharge Rate:</strong> Estimated burst current
+                divided by battery Ah, shown as required C-rating.
+              </li>
+              <li>
+                <strong>Current Draw (Hover/Cruise):</strong> FPV hover current
+                or fixed-wing cruise current estimate.
+              </li>
+              <li>
+                <strong>Component Impact Analysis:</strong> Highlights heaviest
+                component, limiting factor, and best next improvement.
+              </li>
+            </ul>
+          </div>
+
+          <div class="guide-card correlations">
+            <h3>Key Correlations in This UI</h3>
+            <ul>
+              <li>
+                <strong>Battery Capacity ↑</strong> → Flight Time ↑, Total
+                Weight ↑, Payload Capacity ↓.
+              </li>
+              <li>
+                <strong>Motor KV ↑</strong> → Max Speed ↑, Current Draw ↑,
+                Flight Time ↓ (all else equal).
+              </li>
+              <li>
+                <strong>Cell Count ↑ (3S/4S/6S)</strong> → Voltage ↑,
+                Speed/Power potential ↑, often Current (A) at hover ↓ for same
+                power.
+              </li>
+              <li>
+                <strong>VTX Power ↑</strong> → Signal-based range ↑, but with
+                slight weight/current penalties.
+              </li>
+              <li>
+                <strong>Frame Size (FPV) ↑</strong> → Weight ↑ and speed
+                potential ↑; prop disc area can improve hover efficiency trends.
+              </li>
+              <li>
+                <strong>Wingspan (Fixed Wing) ↑</strong> → Cruise efficiency
+                tendency ↑ but top-speed tendency ↓.
+              </li>
+              <li>
+                <strong>Li-Ion vs LiPo:</strong> Li-Ion can extend endurance in
+                lighter-load setups, while LiPo supports higher burst
+                performance.
+              </li>
+              <li>
+                <strong>Range is dual-limited:</strong> Better VTX helps only
+                until endurance/speed becomes the limiting side.
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="glass-panel advanced-toolkit"
+        aria-label="Advanced toolkit"
+      >
+        <h2>Advanced Optimization Toolkit</h2>
+
+        <div class="toolkit-grid">
+          <div class="toolkit-card">
+            <h3>Mission Profiles</h3>
+            <div class="toolkit-controls">
+              <label for="missionProfile">Preset</label>
+              <select id="missionProfile" class="glass-select">
+                <option value="freestyle">Freestyle FPV</option>
+                <option value="longrange">Long-Range FPV</option>
+                <option value="cinematic">Cinematic FPV</option>
+                <option value="trainer">Trainer FPV</option>
+                <option value="cruise_fw">Cruise Fixed Wing</option>
+                <option value="efficiency_fw">Efficiency Fixed Wing</option>
+                <option value="speed_fw">Speed Fixed Wing</option>
+              </select>
+              <button id="applyProfileBtn" class="toolkit-btn">
+                Apply Profile
+              </button>
+            </div>
+          </div>
+
+          <div class="toolkit-card">
+            <h3>Environment &amp; Battery Health</h3>
+            <div class="toolkit-controls two-col">
+              <label for="envAltitude">Altitude (m)</label>
+              <input
+                id="envAltitude"
+                type="number"
+                class="glass-input advanced-input"
+                min="0"
+                max="5000"
+                value="0"
+              />
+
+              <label for="envTemperature">Temperature (°C)</label>
+              <input
+                id="envTemperature"
+                type="number"
+                class="glass-input advanced-input"
+                min="-20"
+                max="50"
+                value="20"
+              />
+
+              <label for="envWind">Wind Speed (km/h)</label>
+              <input
+                id="envWind"
+                type="number"
+                class="glass-input advanced-input"
+                min="0"
+                max="80"
+                value="0"
+              />
+
+              <label for="batteryHealth">Battery Health (%)</label>
+              <input
+                id="batteryHealth"
+                type="number"
+                class="glass-input advanced-input"
+                min="50"
+                max="100"
+                value="100"
+              />
+
+              <label for="batteryCycles">Battery Cycles</label>
+              <input
+                id="batteryCycles"
+                type="number"
+                class="glass-input advanced-input"
+                min="0"
+                max="1000"
+                value="0"
+              />
+            </div>
+          </div>
+
+          <div class="toolkit-card">
+            <h3>Constraint Solver</h3>
+            <div class="toolkit-controls two-col">
+              <label for="targetFlightTime">Min Flight Time (min)</label>
+              <input
+                id="targetFlightTime"
+                type="number"
+                class="glass-input"
+                min="0"
+                value="10"
+              />
+
+              <label for="targetMaxWeight">Max Weight (g)</label>
+              <input
+                id="targetMaxWeight"
+                type="number"
+                class="glass-input"
+                min="0"
+                value="900"
+              />
+
+              <label for="targetMinRange">Min Range (m)</label>
+              <input
+                id="targetMinRange"
+                type="number"
+                class="glass-input"
+                min="0"
+                value="1000"
+              />
+
+              <label for="targetMinPayload">Min Payload (g)</label>
+              <input
+                id="targetMinPayload"
+                type="number"
+                class="glass-input"
+                min="0"
+                value="500"
+              />
+            </div>
+            <button id="solveConstraintsBtn" class="toolkit-btn">
+              Find Best Configuration
+            </button>
+          </div>
+
+          <div class="toolkit-card">
+            <h3>Cost &amp; BOM</h3>
+            <div id="bomTotal" class="toolkit-metric">Total Cost: $0.00</div>
+            <div id="costEfficiency" class="toolkit-metric">
+              Cost Efficiency: $0.00 / min
+            </div>
+            <ul id="bomList" class="toolkit-list"></ul>
+          </div>
+
+          <div class="toolkit-card">
+            <h3>Confidence Bands (Best / Typical / Worst)</h3>
+            <div class="confidence-grid">
+              <div class="confidence-row">
+                <span>Flight Time</span><span id="confFlightTime">-</span>
+              </div>
+              <div class="confidence-row">
+                <span>Max Speed</span><span id="confMaxSpeed">-</span>
+              </div>
+              <div class="confidence-row">
+                <span>Range</span><span id="confRange">-</span>
+              </div>
+              <div class="confidence-row">
+                <span>Payload</span><span id="confPayload">-</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="toolkit-card">
+            <h3>Safety Checks</h3>
+            <ul id="safetyChecks" class="toolkit-list"></ul>
+          </div>
+
+          <div class="toolkit-card toolkit-wide">
+            <h3>Comparison Snapshots</h3>
+            <div class="toolkit-controls two-col">
+              <label for="snapshotName">Snapshot Name</label>
+              <input
+                id="snapshotName"
+                type="text"
+                class="glass-input"
+                placeholder="e.g. Long-range test"
+              />
+
+              <label for="snapshotA">Compare A</label>
+              <select id="snapshotA" class="glass-select"></select>
+
+              <label for="snapshotB">Compare B</label>
+              <select id="snapshotB" class="glass-select"></select>
+            </div>
+            <div class="toolkit-actions">
+              <button id="saveSnapshotBtn" class="toolkit-btn">
+                Save Snapshot
+              </button>
+              <button id="compareSnapshotsBtn" class="toolkit-btn">
+                Compare Snapshots
+              </button>
+              <button id="exportReportBtn" class="toolkit-btn">
+                Export JSON Report
+              </button>
+            </div>
+            <ul id="snapshotList" class="toolkit-list"></ul>
+            <div id="snapshotDiff" class="snapshot-diff">
+              No snapshot comparison yet.
+            </div>
+          </div>
+
+          <div class="toolkit-card toolkit-wide">
+            <h3>Sensitivity View</h3>
+            <div class="sensitivity-wrap">
+              <canvas id="sensitivityChart"></canvas>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <footer class="glass-panel">
         <p>
           © 2026 Drone Setup - Build your perfect FPV or Fixed Wing aircraft
