Add solver result panel and ChartDataLabels fix
Add a solver result UI and styles, sync sliders to selects, and fix ChartDataLabels behavior. CSS: introduce .solver-result styles and adjust .sensitivity-wrap. HTML: add #solverResult container with title/body. JS (main.js): add syncSlidersToSelects(), call it when applying profiles and after solver applies a best match, and show formatted success/failure messages in the solver result panel. JS (charts.js): unregister ChartDataLabels globally to avoid crashes with empty charts, then register it per-chart for charts that need it and enable datalabels display. Also remove a duplicate tab click listener that caused double chart refreshes.

--- a/index.html
+++ b/index.html
@@ -655,6 +655,10 @@
             <button id="solveConstraintsBtn" class="toolkit-btn">
               Find Best Configuration
             </button>
+            <div id="solverResult" class="solver-result" style="display: none">
+              <div class="solver-result-title">Best Match Found</div>
+              <div id="solverResultBody" class="solver-result-body"></div>
+            </div>
           </div>
 
           <div class="toolkit-card">
